# xcfg

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/xcfg/: data.h  exceptions.h  parser.h  processor.h  tokenizer.h  value.h  xcfg.h
include/xcfg/util/: ordered_map.h  path.h  string.h
src/example/: example.cc  example.xcfg  example_defines.xcfg
src/xfg/: data.cc  exceptions.cc  parser.cc  processor.cc  tokenizer.cc  value.cc  xcfg.cc
src/xfg/util/: path.cc  string.cc
